--- a/src/general-components/FeedbackForm/FeedbackForm.css
+++ b/src/general-components/FeedbackForm/FeedbackForm.css
@@ -9,12 +9,13 @@
     margin-bottom: 1.25em;
 }
 .FeedbackForm label{
-    font-size: 14px;
+    font-size: calc(.6rem + .45vw);
     opacity: .75;
     margin-bottom: .25em;
 }
 .FeedbackForm .inner input,
 .FeedbackForm .inner textarea{
+    font-size: calc(.65rem + .5vw);
     padding: .75em;
     border: 2px solid #F2F2F2;
     box-shadow: 15px 15px 35px rgba(112, 124, 151, 0.05);
